--- a/prereleases.html
+++ b/prereleases.html
@@ -21,7 +21,7 @@
 </Pre>
 
 <div>
-    Latest: <a href="Alpha2.zip" download>GGTM-A2</a>
+    Latest: <a href="Alpha3.zip" download>GGTM-latest</a>
 </div>
 
 <div>
@@ -32,6 +32,10 @@
     </li>
     <li>
         <a href="Alpha2.zip" download>GGTM-A2</a>
+    </li>
+
+    <li>
+        <a href="Alpha3.zip" download>GGTM-A3</a>
     </li>
 </ul>
 </div>
