--- a/prereleases.html
+++ b/prereleases.html
@@ -9,36 +9,16 @@
 
 <h2>Pre-Releases</h2>
 
-<Pre>
-    Install Directions:
-
-    - Download the lastest Version, or another version of your choice
-    - Open File explorer
-    - Find where your download is and Extract all to any location (try extracting to Documents, Downloads, Desktop so that you never lose this folder)
-    - To being playing open the folder you extracted Find the file called GGTM or GGTM.exe
-        - Play the game: Open the file GGTM
-        - Create a shortcut to the game: Right click on the file GGTM > Show more > Create shortcut Then drag this to your desktop for convince
-</Pre>
-
-<div>
-    Latest: <a href="Alpha3.zip" download>GGTM-latest</a>
-</div>
-
-<div>
-    Versions:
 <ul>
     <li>
-        <a href="Alpha1.zip" download>GGTM-A1</a>
+        <a href="r-windows/windows-r.html" target="frame2">Windows</a>
     </li>
     <li>
-        <a href="Alpha2.zip" download>GGTM-A2</a>
-    </li>
-
-    <li>
-        <a href="Alpha3.zip" download>GGTM-A3</a>
+        <a href="r-mac/mac-r.html" target="frame2">Mac-OS</a>
     </li>
 </ul>
-</div>
+
+<iframe src="" frameborder="0" name="frame2" width="100%" style="max-height: 100%; min-height: 600px; height: 100%;"></iframe>
 
 </body>
 </html>
