--- a/docs.html
+++ b/docs.html
@@ -5,7 +5,6 @@
     <title>Documentation</title>
 </head>
 <body>
-<h2>Alpha 2</h2>
 <p>What to do on spawn:</p>
 <ul>
   <li>Find the witches hut</li>
@@ -13,12 +12,76 @@
   <li>Start any available quest</li>
   <li>Purchase as much as you can from the Witches Earth shop</li>
 </ul>
-<pre>Alpha 2 includes:
-plants, map generation, space shuttle, witches house
+<pre>
 
+    What is new:
 
-Future plans:
-quests, plant sowing and harvesting, Witches Market, Inventory, Auto Tasks,
-Wild animals, Taming animals, Enemy tower from the kingdom on earth, Mars</pre>
+    - Added new UI layout matches to the screen
+    - Info bar now show speed, level and money
+
+    Latest Version  x means not available yet:
+
+    x Points Bar
+
+    • Food/crops
+    • Crop status on click
+    • Crop harvest in menu (requirements?)
+    • Auto replant on harvest
+    • Backpack eat food
+    • GrainMice can be grabbed with hands or clippers
+    • Mahcrea requires a basket
+
+    • Collisions
+    x Proper witches home collision
+    x Proper SSMars collision
+    • SSMars scene
+    • Witches home scene
+    • Note movement within these scenes is along x only unless they are just menus
+
+    x Quests
+    • Unlock by level
+    • Collect supplies before exile
+    x Make a good connection with the witch
+
+    • Witches house
+    x Arrows to read all of their advice
+    x Menu that shows the level of friends
+    x Conversation to boost friendship
+    x Advice book menu tabs to go back
+    x The witch will offer a market
+    x First free item is time freeze, during preparations every level will cost a day while on earth. Time freeze costs more on mars
+
+    x Witches market
+    x Mars hut
+    x Time freeze 1 level ≈ 1 day
+    x Basket
+
+    x Auto tasks
+    x Menu that will create orders to do tasks idle game open only
+    • Get these by level and purchase from the witch
+
+    x Oxygen
+    • Add planet to pawn
+
+    • Backpack
+    • HotBar
+    • Items gameobject backback/hotbar
+    • Items gameobject count backback/hotbar
+    x Items count indicator backback/hotbar
+    x Items in backback/hotbar
+    x Reorder items in backback/hotbar
+
+    • Earth
+    x enemy tower
+    x Exiler pawn tells them they’re being exiled ordered by their kingdom, to visit the Witch in their Witches Home so that they can prepare for their new life on mars.
+
+    x Wild animals
+    x No hunger
+
+    x Tamed animals
+    x Hunger added
+    x Feeder from witch - hand feed else
+
+</pre>
 </body>
 </html>
