--- a/r-mac/mac-r.html
+++ b/r-mac/mac-r.html
@@ -20,7 +20,7 @@
 </Pre>
 
 <div>
-    Latest: <a href="Alpha3.zip" download>GGTM-latest</a>
+    Latest: <a href="Alpha4.zip" download>GGTM-latest</a>
 </div>
 
 <div>
@@ -28,6 +28,9 @@
     <ul>
         <li>
             <a href="Alpha3.zip" download>GGTM-A3</a>
+        </li>
+        <li>
+            <a href="Alpha4.zip" download>GGTM-A3</a>
         </li>
     </ul>
 </div>
