--- a/docs.html
+++ b/docs.html
@@ -18,6 +18,9 @@
 
     - Added new UI layout matches to the screen
     - Info bar now show speed, level and money
+    - Hot Dog Item at the start of the game
+    - Inventory Management
+    - Inventory Item selectable
 
     Latest Version  x means not available yet:
 
@@ -67,9 +70,12 @@
     • HotBar
     • Items gameobject backback/hotbar
     • Items gameobject count backback/hotbar
-    x Items count indicator backback/hotbar
-    x Items in backback/hotbar
+    • Items count indicator backback/hotbar
+    • Items in backback/hotbar
+    • Hotbar quick select using 0-9 (only 7 items in the hot bar; 8,9,0 will be keys quick select inventory)
+    x Quick select inventory
     x Reorder items in backback/hotbar
+    x use items in backback/hotbar
 
     • Earth
     x enemy tower
