--- a/r-windows/windows-r.html
+++ b/r-windows/windows-r.html
@@ -20,7 +20,7 @@
 </Pre>
 
 <div>
-  Latest: <a href="Alpha4.zip" download>GGTM-latest</a>
+  Latest: <a href="Alpha5.zip" download>GGTM-latest</a>
 </div>
 
 <div>
@@ -37,6 +37,9 @@
       </li>
       <li>
           <a href="Alpha4.zip" download>GGTM-A4</a>
+      </li>
+      <li>
+          <a href="Alpha5.zip" download>GGTM-A5</a>
       </li>
   </ul>
 </div>
