--- a/docs.html
+++ b/docs.html
@@ -21,6 +21,7 @@
     - Hot Dog Item at the start of the game
     - Inventory Management
     - Inventory Item selectable
+    - Witches Market GUI
 
     Latest Version  x means not available yet:
 
@@ -47,17 +48,18 @@
     x Make a good connection with the witch
 
     • Witches house
-    x Arrows to read all of their advice
-    x Menu that shows the level of friends
     x Conversation to boost friendship
-    x Advice book menu tabs to go back
-    x The witch will offer a market
+    • Advice book menu tabs to go back
+    • The witch will offer a market
     x First free item is time freeze, during preparations every level will cost a day while on earth. Time freeze costs more on mars
 
-    x Witches market
+    • Witches Quests
+    x Witches Quests are a design to get free items This will boost friendship, and maybe spell cast
+
+    • Witches market
     x Mars hut
     x Time freeze 1 level ≈ 1 day
-    x Basket
+    • Basket
 
     x Auto tasks
     x Menu that will create orders to do tasks idle game open only
