--- a/r-windows/windows-r.html
+++ b/r-windows/windows-r.html
@@ -20,7 +20,7 @@
 </Pre>
 
 <div>
-  Latest: <a href="Alpha5.zip" download>GGTM-latest</a>
+  Latest: <a href="Alpha6.zip" download>GGTM-latest</a>
 </div>
 
 <div>
@@ -40,6 +40,9 @@
       </li>
       <li>
           <a href="Alpha5.zip" download>GGTM-A5</a>
+      </li>
+      <li>
+          <a href="Alpha6.zip" download>GGTM-A6</a>
       </li>
   </ul>
 </div>
