--- a/r-windows/windows-r.html
+++ b/r-windows/windows-r.html
@@ -14,9 +14,9 @@
     - Download the lastest Version, or another version of your choice
     - Open File explorer
     - Find where your download is and Extract all to any location (try extracting to Documents, Downloads, Desktop so that you never lose this folder)
-    - To being playing open the folder you extracted Find the file called GGTM or GGTM.exe
-        - Play the game: Open the file GGTM
-        - Create a shortcut to the game: Right click on the file GGTM > Show more > Create shortcut Then drag this to your desktop for convince
+    - To being playing open the folder you extracted Find the file called GGTM or some cases ChestnutsXMLGame
+        - Play the game: Open the file (GGTM/ChestnutsXMLGame)
+        - Create a shortcut to the game: Right click on the file (GGTM/ChestnutsXMLGame) > Show more > Create shortcut Then drag this to your desktop for convince
 </Pre>
 
 <div>
