--- a/r-windows/windows-r.html
+++ b/r-windows/windows-r.html
@@ -14,38 +14,38 @@
     - Download the lastest Version, or another version of your choice
     - Open File explorer
     - Find where your download is and Extract all to any location (try extracting to Documents, Downloads, Desktop so that you never lose this folder)
-    - To being playing open the folder you extracted Find the file called GGTM or GGTM.exe
-        - Play the game: Open the file GGTM
-        - Create a shortcut to the game: Right click on the file GGTM > Show more > Create shortcut Then drag this to your desktop for convince
+    - To being playing open the folder you extracted Find the file called GGTM or some cases ChestnutsXMLGame
+        - Play the game: Open the file (GGTM/ChestnutsXMLGame)
+        - Create a shortcut to the game: Right click on the file (GGTM/ChestnutsXMLGame) > Show more > Create shortcut Then drag this to your desktop for convince
 </Pre>
 
 <div>
-  Latest: <a href="Alpha6.zip" download>GGTM-latest</a>
+    Latest: <a href="Alpha6.zip" download>GGTM-latest</a>
 </div>
 
 <div>
-  Versions:
-  <ul>
-    <li>
-      <a href="Alpha1.zip" download>GGTM-A1</a>
-    </li>
-    <li>
-      <a href="Alpha2.zip" download>GGTM-A2</a>
-    </li>
-      <li>
-          <a href="Alpha3.zip" download>GGTM-A3</a>
-      </li>
-      <li>
-          <a href="Alpha4.zip" download>GGTM-A4</a>
-      </li>
-      <li>
-          <a href="Alpha5.zip" download>GGTM-A5</a>
-      </li>
-      <li>
-          <a href="Alpha6.zip" download>GGTM-A6</a>
-      </li>
-  </ul>
+    Versions:
+    <ul>
+        <li>
+            <a href="Alpha1.zip" download>GGTM-A1</a>
+        </li>
+        <li>
+            <a href="Alpha2.zip" download>GGTM-A2</a>
+        </li>
+        <li>
+            <a href="Alpha3.zip" download>GGTM-A3</a>
+        </li>
+        <li>
+            <a href="Alpha4.zip" download>GGTM-A4</a>
+        </li>
+        <li>
+            <a href="Alpha5.zip" download>GGTM-A5</a>
+        </li>
+        <li>
+            <a href="Alpha6.zip" download>GGTM-A6</a>
+        </li>
+    </ul>
 </div>
 
 </body>
-</html>
+</html>d
