--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gremmi Goes To mars</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Gremmi Goes To Mars</h1>
@@ -12,7 +13,7 @@ toxic gasses? How will he grow food? Wheres his water source? Help Gremmi make t
 <nav>
   <ul>
     <li><a href="prereleases.html" target="frame">Pre-releases</a></li>
-      <li><a href="docs.html" target="frame">Documentation</a></li>
+      <li><a href="Documents/index.html">Documentation</a></li>
   </ul>
 </nav>
 
