--- a/Documents/docs.html
+++ b/Documents/docs.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Documentation</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 <p>What to do on spawn:</p>
