--- a/Documents/Market/currency.html
+++ b/Documents/Market/currency.html
@@ -11,52 +11,16 @@
     Currency
 </h1>
 
-<table>
-    <tr>
-        <td>
-            Tier
-        </td>
-        <td>
-            Name
-        </td>
-        <td>
-            Description
-        </td>
-    </tr>
-    <tr>
-        <td>
-            Tier 1
-        </td>
-        <td>
-            Ashcoin
-        </td>
-        <td>
-            Widespread, low-value, made of volcanic ash and resin
-        </td>
-    </tr>
-    <tr>
-        <td>Tier 2</td>
-        <td>Moonbit</td>
-        <td>Silver-like, standard merchant coin</td>
-    </tr>
-    <tr>
-        <td>Tier 3</td>
-        <td>Starshard</td>
-        <td>Rare, magic-infused glass or crystal chips</td>
-    </tr>
-    <tr>
-        <td>Tier 4</td>
-        <td>Suncrown</td>
-        <td>Gold-based royal coin, often ceremonial or used in big trades</td>
-    </tr>
-    <tr>
-        <td>Tier 5</td>
-        <td>Etherium Crest</td>
-        <td>Ultra-rare, used by witches or nobles for arcane trades</td>
-    </tr>
-</table>
 
-
+<pre>
+    |   Tier   |   Currency Name   |   Relative Value   |   Conversion Rate (approx.)                            |
+    | -------- | ----------------- | ------------------ | ------------------------------------------------------ |
+    | Tier 1   | Ashcoin           | Very Common        |   100 Ashcoins = 1 Moonbit                             |
+    | Tier 2   | Moonbit           | Common             |   10 Moonbits = 1 Starshard                            |
+    | Tier 3   | Starshard         | Rare               |   5 Starshards = 1 Suncrown                            |
+    | Tier 4   | Suncrown          | Epic               |   2 Suncrowns = 1 Etherium Crest                       |
+    | Tier 5   | Etherium Crest    | Legendary          |   1 Etherium Crest = 1 Ultra-rare/arcane transaction   |
+</pre>
 
 
 
