--- a/Documents/Animal/index.html
+++ b/Documents/Animal/index.html
@@ -70,5 +70,445 @@
 |   Red Vult King       | Flying Beast    | Leader of the Mars Vultures. Gathers tech and commands flocks.         | Boss-level, disrupts tech tools              |
 
 </pre>
+
+Guide for their stats still finalizing:
+
+Earth Enemies
+
+King's Branders
+
+HP: 120
+
+Damage: 15 (Brand Strike), 5 (Shield Bash)
+
+Drops: Royal Sigil, Polished Moonbit, Brand Ember
+
+Swamp Howler
+
+HP: 80
+
+Damage: 12 (Lunge), 5 (Fear Screech - AoE debuff)
+
+Drops: Howler Hide, Gnarled Claw, Bog Blood Vial
+
+Tombroot Golem
+
+HP: 250
+
+Damage: 20 (Root Slam), 10 (Stone Toss)
+
+Drops: Living Moss, Stonecore, Ancient Bark
+
+Fanghollow Wolf
+
+HP: 90
+
+Damage: 18 (Bite), 8 (Shadow Dash)
+
+Drops: Shadow Fur, Hollow Fang, Dark Residue
+
+Crown Cleric
+
+HP: 70
+
+Damage: 10 (Radiant Bolt), 20 (Purify - vs summoned creatures)
+
+Drops: Holy Relic, Sunmetal Pin, Burnt Parchment
+
+Skullhorn Ram
+
+HP: 100
+
+Damage: 25 (Charge), 10 (Hoof Kick)
+
+Drops: Skullhorn, Fire Pelt, Ritual Horn
+
+Bitter Shade
+
+HP: 60 (Immune to physical damage)
+
+Damage: 15 (Chill Touch), 10 (Possession - chance to stun)
+
+Drops: Wailing Echo, Shade Dust, Forgotten Ring
+
+Witchhunter Reclaimer
+
+HP: 140
+
+Damage: 15 (Nullblade), 10 (Anti-Magic Bolt)
+
+Drops: Silver Lash, Warded Cloak, Witchbound Scroll
+
+Mars Enemies
+
+Ashmaw
+
+HP: 180
+
+Damage: 25 (Jaw Snap), 12 (Sand Burst)
+
+Drops: Ash Teeth, Redstone Chunk, Jawbone Fragment
+
+Shiverspawn
+
+HP: 20 (x5 per swarm)
+
+Damage: 5 each, plus 3 Poison over time
+
+Drops: Chitin Sliver, Infection Gland, Swarm Residue
+
+Ironskulk
+
+HP: 150
+
+Damage: 18 (Laser Shot), 10 (EMP Pulse - disables tech)
+
+Drops: Circuit Core, Scrap Alloy, Sensor Lens
+
+Martian Dreadroot
+
+HP: 200
+
+Damage: 20 (Vine Whip), 5 (Lure Pulse - causes confusion)
+
+Drops: Living Root, Redglass Orb, Acidic Sap
+
+Siltshaper
+
+HP: 130
+
+Damage: 15 (Sand Bolt), 20 (Erosion Hex)
+
+Drops: Dust Cloak, Arcane Pebble, Shaper's Bone
+
+Glass Wraith
+
+HP: 90
+
+Damage: 14 (Slash), 12 (Bleeding Spike - causes bleed)
+
+Drops: Crystal Dust, Reflective Shard, Echo Wail
+
+Thornjaw Grax
+
+HP: 200
+
+Damage: 30 (Jaw Snap), 10 (Tail Lash)
+
+Drops: Grax Hide, Venom Tooth, Spiked Tongue
+
+Red Vult King
+
+HP: 300 (Boss)
+
+Damage: 22 (Dive Bomb), 12 (Screech - AoE fear)
+
+Drops: Vult Crown, Scavenged Tech, Rare Starshard
+
+🧙 Witch-Touched / Arcane Enemies
+
+Mirrorling
+
+HP: 100
+
+Damage: Copies player’s last 3 attacks
+
+Drops: Mirror Shard, Echo Skin, Soul Reflection
+
+The Bone Crone
+
+HP: 400 (Boss)
+
+Damage: 20 (Bone Lash), 10 (Spirit Drain - heals her)
+
+Drops: Crone’s Finger, Hex Candle, Etherium Crest (rare)
+
+Whisperbeast
+
+HP: 180
+
+Damage: 15 (Claw), 20 (Mind Bite - sanity damage)
+
+Drops: Whisper Skull, Void Fur, Fear Fang
+
+Rift-Spider
+
+HP: 220
+
+Damage: 18 (Leg Stab), 15 (Void Web - summons Earth enemy)
+
+Drops: Web Thread, Rift Mandible, Pocket Dimension Orb
+
+Etherling Hunter
+
+HP: 300 (Mini-boss)
+
+Damage: 20 (Voidshot), 25 (Blade Flicker)
+
+Drops: Arcane Core, Ether Pulse Rifle, Cloak of Silence
+
+Void-Crowned Revenant
+
+HP: 500 (Final boss tier)
+
+Damage: 30 (Royal Slam), 25 (Undead Call - summons ghost goblins)
+
+Drops: Revenant Crown, Curse Bone, Ancient Banner
+
+Dustwither Idol
+
+HP: 600 (Immobile boss)
+
+Damage: Absorbs spells, 35 (Reflect Arcana), 10 AoE tick (Dust Pulse)
+
+Drops: Idol Core, Martian Relic, Dust Crystal (quest item)
+
+
+
+
+All Enemy table
+
+Bograt
+
+Companion
+
+35
+
+4
+
+Rotten Meat, Poison Sack
+
+Detects toxins, eats trash
+
+Mirehound
+
+Mount
+
+80
+
+10
+
+Mirehide, Slime Glands
+
+Agile in mud or swampy terrain
+
+Skyjack Crow
+
+Scout
+
+25
+
+3 (peck)
+
+Shiny Trinket, Feather Quill
+
+May steal random item
+
+Tusktoad
+
+Beast of burden
+
+90
+
+12 (ram)
+
+Tusk, Toad Fat
+
+Jumps far, hostile if mistreated
+
+Ironback Beetle
+
+Mount
+
+95
+
+8 (charge)
+
+Beetle Plate, Antenna Fragments
+
+Natural tunnel armor
+
+Fey Moth
+
+Summoned
+
+20
+
+0 (aura)
+
+Illusion Dust, Wing Scales
+
+Hallucinates enemies, dies quickly
+
+Scrap Golem
+
+Construct
+
+120
+
+15
+
+Scrap Core, Golem Shard
+
+Tanky, can build defenses
+
+Howling Badger
+
+Wild
+
+55
+
+14 (frenzy)
+
+Badger Meat, Screech Claw
+
+Attacks when hungry or startled
+
+Witch Elk
+
+NPC Pawn
+
+150
+
+0
+
+Spirit Antler, Ether Bark
+
+Only harmed by magic, quest-linked
+
+Coalcat
+
+Pet
+
+30
+
+6 (burn)
+
+Ash Fur, Warm Stone
+
+Heats area, friendly but elusive
+
+Redcap Hopper
+
+Mount
+
+65
+
+5
+
+Hopper Legs, Chitin
+
+Hard to tame, jumps high
+
+Glass Wyrmling
+
+Pet
+
+40
+
+8
+
+Crystal Fragments, Lightcore Dust
+
+Emits soft light, absorbs dmg
+
+Dustling
+
+Worker Pawn
+
+30
+
+2
+
+Shinies, Imp Dust
+
+Hoards loot; dies if overworked
+
+Thornback Grazer
+
+Wild
+
+70
+
+10
+
+Thorn Meat, Moss-Hide
+
+Spikes deploy under attack
+
+Burrowflap
+
+Scout
+
+45
+
+4
+
+Wing Leather, Cave Map Fragment
+
+Echolocation map, weak eyesight
+
+Glowgoat
+
+Herd Animal
+
+55
+
+0
+
+Glow Milk, Biowool, Fertile Dung
+
+Light source and organic resource
+
+Mars Vulture
+
+Wild
+
+60
+
+6
+
+Metal Bits, Vulture Talon
+
+Eats wreckage, drops tech
+
+Emberbug
+
+Companion
+
+25
+
+3 (burn)
+
+Ember Residue, Spark Gland
+
+Lights up when enemies nearby
+
+Rustbeak
+
+Combat Pet
+
+50
+
+12
+
+Rust Feather, Metal Beak
+
+Helm-breaker, targets weak spots
+
+Siltwalker
+
+Large Mount
+
+100
+
+15
+
+Sand Oil, Siltwalker Tendon
+
+Moves across dunes effortlessly
+
+
+
 </body>
 </html>
