--- a/Documents/prereleases.html
+++ b/Documents/prereleases.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Prereleases</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -11,10 +12,10 @@
 
 <ul>
     <li>
-        <a href="r-windows/windows-r.html" target="frame2">Windows</a>
+        <a href="../r-windows/windows-r.html" target="frame2">Windows</a>
     </li>
     <li>
-        <a href="r-mac/mac-r.html" target="frame2">Mac-OS</a>
+        <a href="../r-mac/mac-r.html" target="frame2">Mac-OS</a>
     </li>
 </ul>
 
