--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ toxic gasses? How will he grow food? Wheres his water source? Help Gremmi make t
 
 <nav>
   <ul>
-    <li><a href="prereleases.html" target="frame">Pre-releases</a></li>
+    <li><a href="Documents/prereleases.html" target="frame">Pre-releases</a></li>
       <li><a href="Documents/index.html">Documentation</a></li>
   </ul>
 </nav>
