--- a/Documents/index.html
+++ b/Documents/index.html
@@ -29,6 +29,7 @@
   </ul>
 </nav>
   </div>
+  <div class="tallSep"></div>
 
   <section>
     <iframe src="docs.html" frameborder="0" name="frame" width="100%" style="max-height: 100%; min-height: 600px; height: 100%;"></iframe>
