--- a/Documents/Food/index.html
+++ b/Documents/Food/index.html
@@ -55,5 +55,252 @@
 | Witchapple Core   | 1–2 Suncrowns   | Grows only once every eclipse. Grants extreme vitality or curses you for hoarding it (depends on alignment).                             |
 </pre>
 
+<h1>Recipes</h1>
+
+<h3>Earth Food Recipes</h3>
+<table>
+    <thead>
+    <tr>
+        <th>Food Item</th><th>Ingredients</th><th>Crafting Station</th><th>Steps</th><th>Effect</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Cinderbread</td>
+        <td>2x Volcanic Wheat, 1x Fire Salts</td>
+        <td>Stone Oven</td>
+        <td>Grind wheat → mix with salts → bake until charred</td>
+        <td>+Heat resistance (short)</td>
+    </tr>
+    <tr>
+        <td>Witchmilk Cheese</td>
+        <td>1x Moonmilk Vine, 1x Beast Milk</td>
+        <td>Cheese Press (Moonlit)</td>
+        <td>Milk → add vine extract → ferment under moonlight</td>
+        <td>+Minor health regen</td>
+    </tr>
+    <tr>
+        <td>Glowroot Stew</td>
+        <td>2x Glowroot, 1x Bogroot Water</td>
+        <td>Cauldron</td>
+        <td>Chop roots → boil slowly → serve hot</td>
+        <td>+Warmth buff in cold</td>
+    </tr>
+    <tr>
+        <td>Banshee’s Breath Ale</td>
+        <td>1x Nightshade Herb, 1x Ghost Pepper</td>
+        <td>Spirit Brewer</td>
+        <td>Brew with nightshade → infuse pepper → bottle during night</td>
+        <td>+Speed buff, -1 Charisma (brief)</td>
+    </tr>
+    <tr>
+        <td>Gobshroom Jerky</td>
+        <td>1x Gobshroom, 1x Trollvine Honey</td>
+        <td>Drying Rack</td>
+        <td>Marinate → dry for 3 nights</td>
+        <td>+Stamina recovery</td>
+    </tr>
+    <tr>
+        <td>Pixie Dust Pastries</td>
+        <td>2x Shimmerfruit, 1x Flour (any)</td>
+        <td>Enchanted Oven</td>
+        <td>Jam fruit → fill pastry → bake until sparkles</td>
+        <td>+Levitation (brief hop)</td>
+    </tr>
+    <tr>
+        <td>Lava Beans</td>
+        <td>2x Fire Beans</td>
+        <td>Smokepot</td>
+        <td>Roast until bitter and thick</td>
+        <td>+Energy/Stamina boost</td>
+    </tr>
+    <tr>
+        <td>Feyfruit</td>
+        <td>1x Feyfruit</td>
+        <td>None</td>
+        <td>Eat raw, or brew into tea</td>
+        <td>Random minor buff per eater</td>
+    </tr>
+    <tr>
+        <td>Skullberry Jam</td>
+        <td>2x Skullberry, 1x Bogroot Water</td>
+        <td>Jam Pot</td>
+        <td>Boil until thick → jar</td>
+        <td>+Resistance to fear (brief)</td>
+    </tr>
+    <tr>
+        <td>Bog Butter</td>
+        <td>1x Bogroot, 1x Beast Milk</td>
+        <td>Fermentation Pit</td>
+        <td>Wrap tuber in cloth → ferment in bog</td>
+        <td>+Fat reserves (slow hunger loss)</td>
+    </tr>
+    </tbody>
+</table>
+
+<h3>Mars Food Recipes</h3>
+<table>
+    <thead>
+    <tr>
+        <th>Food Item</th><th>Ingredients</th><th>Crafting Station</th><th>Steps</th><th>Effect</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Redvine Tangle</td>
+        <td>2x Redvine</td>
+        <td>Stone Mortar</td>
+        <td>Boil or shred vines</td>
+        <td>Can also be used as rope</td>
+    </tr>
+    <tr>
+        <td>Ironbloom Petals</td>
+        <td>1x Ironbloom</td>
+        <td>Herbal Steeper</td>
+        <td>Steep in hot water or eat raw</td>
+        <td>+Minor healing, +Iron resist</td>
+    </tr>
+    <tr>
+        <td>Dustmelon</td>
+        <td>1x Dustmelon</td>
+        <td>Knife</td>
+        <td>Slice and consume</td>
+        <td>+Hydration</td>
+    </tr>
+    <tr>
+        <td>Glowfungus</td>
+        <td>2x Glowfungus</td>
+        <td>Campfire</td>
+        <td>Grill until golden</td>
+        <td>+Light aura (dim glow)</td>
+    </tr>
+    <tr>
+        <td>Sootsprouts</td>
+        <td>2x Sootsprout Clumps</td>
+        <td>Ash Oven</td>
+        <td>Roast until crisp</td>
+        <td>+Defense against smoke/gas</td>
+    </tr>
+    <tr>
+        <td>Martian Bloodfruit</td>
+        <td>1x Bloodfruit Cactus</td>
+        <td>Ritual Bowl</td>
+        <td>Crack open → eat or blend</td>
+        <td>+Focus, -Sanity (minor)</td>
+    </tr>
+    <tr>
+        <td>Creakleaves</td>
+        <td>1x Creakleaf Shrub</td>
+        <td>None</td>
+        <td>Eat raw or add to food</td>
+        <td>+Mild speed buff</td>
+    </tr>
+    <tr>
+        <td>Witch’s Thistle</td>
+        <td>1x Witch’s Thistle</td>
+        <td>Potion Brewer</td>
+        <td>Brew slowly under storm</td>
+        <td>+Magic resistance</td>
+    </tr>
+    <tr>
+        <td>Cratercorn</td>
+        <td>2x Cratercorn Stalk</td>
+        <td>Fire Kettle</td>
+        <td>Pop like popcorn</td>
+        <td>+Festive cheer / charm bonus</td>
+    </tr>
+    <tr>
+        <td>Frostmoss</td>
+        <td>1x Frostmoss</td>
+        <td>Cooler or Mortar</td>
+        <td>Freeze or powder for garnish</td>
+        <td>+Cool breath / soothe burns</td>
+    </tr>
+    </tbody>
+</table>
+
+
+<h3>Market Food Recipes</h3>
+<table>
+    <thead>
+    <tr>
+        <th>Food Item</th><th>Ingredients</th><th>Crafting Station</th><th>Steps</th><th>Effect</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Voidberry Tart</td>
+        <td>2x Voidberry, 1x Tart Crust</td>
+        <td>Arcane Oven</td>
+        <td>Bake under starlight</td>
+        <td>Grants invisibility (short)</td>
+    </tr>
+    <tr>
+        <td>Phantom Honeycomb</td>
+        <td>2x Phantom Honey</td>
+        <td>None</td>
+        <td>Eat raw or spread on food</td>
+        <td>+Charisma boost</td>
+    </tr>
+    <tr>
+        <td>Starlight Jam</td>
+        <td>1x Moon Comet Dust, 2x Fruit (any)</td>
+        <td>Moon Cauldron</td>
+        <td>Simmer under full moon</td>
+        <td>+Night vision</td>
+    </tr>
+    <tr>
+        <td>Wyrmfat Caramels</td>
+        <td>1x Fire Wyrm Fat, 1x Sugar</td>
+        <td>Sticky Cauldron</td>
+        <td>Melt and stir, cool to harden</td>
+        <td>+Heat resistance</td>
+    </tr>
+    <tr>
+        <td>Lanternfruit Wine</td>
+        <td>2x Lanternfruit</td>
+        <td>Planar Barrel</td>
+        <td>Ferment across dimensions</td>
+        <td>See into another plane briefly</td>
+    </tr>
+    <tr>
+        <td>Ash-Sugar Scones</td>
+        <td>2x Ash-Sugar Herb, 1x Flour</td>
+        <td>Enchanted Oven</td>
+        <td>Knead and bake during eclipse</td>
+        <td>+Hallucinations (chance for prophecy)</td>
+    </tr>
+    <tr>
+        <td>Blinkberry Pie</td>
+        <td>2x Blinkberry, 1x Pie Crust</td>
+        <td>Quantum Oven</td>
+        <td>Phase crust into filling</td>
+        <td>+Agility or confusion (roll)</td>
+    </tr>
+    <tr>
+        <td>Marrowmash</td>
+        <td>1x Marrowroot, 2x Veg (any)</td>
+        <td>Bone Pot</td>
+        <td>Boil bones + root with vegetables</td>
+        <td>+Strength, may summon whispers</td>
+    </tr>
+    <tr>
+        <td>Chrono Crumbs</td>
+        <td>2x Chrono Grain</td>
+        <td>Chrono Grinder</td>
+        <td>Toast gently in reversed time</td>
+        <td>+Buff duration + undo 1 action</td>
+    </tr>
+    <tr>
+        <td>Witchapple Core</td>
+        <td>1x Witchapple</td>
+        <td>None</td>
+        <td>Bite during eclipse</td>
+        <td>+Vitality or curse (alignment check)</td>
+    </tr>
+    </tbody>
+</table>
+
+
 </body>
 </html>
