--- a/Documents/index.html
+++ b/Documents/index.html
@@ -21,6 +21,7 @@
   <ul>
     <li><a href="Market/currency.html" target="frame">Currency Guide</a></li>
     <li><a href="Food/index.html" target="frame">Food Guide</a></li>
+    <li><a href="Plants/index.html" target="frame">Plant Guide</a></li>
     <li><a href="Animal/index.html" target="frame">Animal Guide</a></li>
     <li><a href="Modes/storyMode.html" target="frame">Story Mode</a></li>
     <li><a href="Modes/survivalMode.html" target="frame">Survival Mode</a></li>
