--- a/r-windows/windows-r.html
+++ b/r-windows/windows-r.html
@@ -21,7 +21,7 @@
 </Pre>
 
 <div>
-    Latest: <a href="Alpha6.zip" download>GGTM-latest</a>
+    Latest: <a href="Alpha7.zip" download>GGTM-latest</a>
 </div>
 
 <div>
@@ -44,6 +44,9 @@
         </li>
         <li>
             <a href="Alpha6.zip" download>GGTM-A6</a>
+        </li>
+        <li>
+            <a href="Alpha7.zip" download>GGTM-A7</a>
         </li>
     </ul>
 </div>
