--- a/Documents/docs.html
+++ b/Documents/docs.html
@@ -24,10 +24,14 @@
     - Inventory Management
     - Inventory Item selectable
     - Witches Market GUI
+    - Mini Map
+    - Wallet
+    - Witches Conversation
 
     Latest Version  x means not available yet:
 
-    x Points Bar
+    x Points
+    • Point indicator
 
     • Food/crops
     • Crop status on click
@@ -38,8 +42,8 @@
     • Mahcrea requires a basket
 
     • Collisions
-    x Proper witches home collision
-    x Proper SSMars collision
+    • Proper witches home collision
+    • Proper SSMars collision
     • SSMars scene
     • Witches home scene
     • Note movement within these scenes is along x only unless they are just menus
