--- a/r-windows/windows-r.html
+++ b/r-windows/windows-r.html
@@ -21,7 +21,7 @@
 </Pre>
 
 <div>
-    Latest: <a href="Alpha7.zip" download>GGTM-latest</a>
+    Latest: <a href="Alpha8.zip" download>GGTM-latest</a>
 </div>
 
 <div>
@@ -47,6 +47,9 @@
         </li>
         <li>
             <a href="Alpha7.zip" download>GGTM-A7</a>
+        </li>
+        <li>
+            <a href="Alpha8.zip" download>GGTM-A8</a>
         </li>
     </ul>
 </div>
