--- a/Documents/Market/currency.html
+++ b/Documents/Market/currency.html
@@ -13,15 +13,30 @@
 
 
 <pre>
-    |   Tier   |   Currency Name   |   Relative Value   |   Conversion Rate (approx.)                            |
-    | -------- | ----------------- | ------------------ | ------------------------------------------------------ |
-    | Tier 1   | Ashcoin           | Very Common        |   100 Ashcoins = 1 Moonbit                             |
-    | Tier 2   | Moonbit           | Common             |   10 Moonbits = 1 Starshard                            |
-    | Tier 3   | Starshard         | Rare               |   5 Starshards = 1 Suncrown                            |
-    | Tier 4   | Suncrown          | Epic               |   2 Suncrowns = 1 Etherium Crest                       |
-    | Tier 5   | Etherium Crest    | Legendary          |   1 Etherium Crest = 1 Ultra-rare/arcane transaction   |
+    |   Tier   |     Currency Name     |   Relative Value   |   Conversion Rate (approx.)        |     Equivalent        |
+    | -------- | --------------------- | ------------------ | ---------------------------------  |  -------------------  |
+    | Tier 1   | (AC)Ashcoin           | Very Common        |   100 Ashcoins = 1 Moonbit         |    1 = 1 Ashcoin      |
+    | Tier 2   | (MB)Moonbit           | Common             |   10 Moonbits = 1 Starshard        |    1 = 100 Ashcoin    |
+    | Tier 3   | (SS)Starshard         | Rare               |   5 Starshards = 1 Suncrown        |    1 = 1,000 Ashcoin  |
+    | Tier 4   | (SC)Suncrown          | Epic               |   2 Suncrowns = 1 Etherium Crest   |    1 = 5,000 Ashcoin  |
+    | Tier 5   | (EC)Etherium Crest    | Legendary          |   1 Etherium Crest                 |    1 = 10,000 Ashcoin |
+</pre>
+<br>
+<pre>
+    Currency is built off of purely Ashcoins, so when you make a transaction its based on how many Ashcoins you have.
+    So if you buy something worth 11 MB you're paying 1100 Ashcoins.
+    Wallet displays the coins in a way that makes it readable so for 11 MB it would show 1 SS 1 MB.
 </pre>
 
+<h2>Survival mode</h2>
+<pre>
+    Currency in survival mode has two versions, one is sandboxed, the other is marketed. In a sandbox version,
+    this would be a private server, or private play; where every player the joins for the first time will start with 0.
+    Once the player gains money that money will only be saved to that save.
+
+    Marketed, or a non sandboxed version of survival mode. Each player will start with 0 still, but every new logon to any
+    un-sandboxed survival plays, the money will be consistent with what that players currency is from the last game and last save.
+</pre>
 
 
 
