--- a/Documents/docs.html
+++ b/Documents/docs.html
@@ -27,6 +27,10 @@
     - Mini Map
     - Wallet
     - Witches Conversation
+    - Plant cutting/harvesting
+    - Guide menu in Witches home market
+    - Button Mapping (not changeable in settings yet)
+    - Game Menu
 
     Latest Version  x means not available yet:
 
