--- a/r-windows/windows-r.html
+++ b/r-windows/windows-r.html
@@ -15,13 +15,13 @@
     - Download the lastest Version, or another version of your choice
     - Open File explorer
     - Find where your download is and Extract all to any location (try extracting to Documents, Downloads, Desktop so that you never lose this folder)
-    - To being playing open the folder you extracted Find the file called GGTM or some cases ChestnutsXMLGame
-        - Play the game: Open the file (GGTM/ChestnutsXMLGame)
-        - Create a shortcut to the game: Right click on the file (GGTM/ChestnutsXMLGame) > Show more > Create shortcut Then drag this to your desktop for convince
+    - To being playing open the folder you extracted Find the file called GGTM or Gremmi Goes To Mars
+        - Play the game: Open the file (GGTM/Gremmi Goes To Mars)
+        - Create a shortcut to the game: Right click on the file (GGTM/Gremmi Goes To Mars) > Show more > Create shortcut Then drag this to your desktop for convince
 </Pre>
 
 <div>
-    Latest: <a href="Alpha8.zip" download>GGTM-latest</a>
+    Latest: <a href="Alpha9.zip" download>GGTM-latest</a>
 </div>
 
 <div>
@@ -50,6 +50,9 @@
         </li>
         <li>
             <a href="Alpha8.zip" download>GGTM-A8</a>
+        </li>
+        <li>
+            <a href="Alpha9.zip" download>GGTM-A9</a>
         </li>
     </ul>
 </div>
