--- a/Documents/docs.html
+++ b/Documents/docs.html
@@ -13,6 +13,7 @@
   <li>Start filling your space ship with food and seeds</li>
   <li>Start any available quest</li>
   <li>Purchase as much as you can from the Witches Earth shop</li>
+  <li>Earn money to pay off the Kingdom or spend mars in terrible debt</li>
 </ul>
 <pre>
 
