--- a/r-mac/mac-r.html
+++ b/r-mac/mac-r.html
@@ -13,11 +13,17 @@
     Install Directions:
 
     - Download the lastest Version, or another version of your choice
-    - Open File explorer
-    - Find where your download is and Extract all to any location (try extracting to Documents, Downloads, Desktop so that you never lose this folder)
-    - To being playing open the folder you extracted Find the file called GGTM or GGTM.exe
-        - Play the game: Open the file GGTM
-        - Create a shortcut to the game: Right click on the file GGTM > Show more > Create shortcut Then drag this to your desktop for convince
+    - IMPORTANT Unzip the file in finder, MacOs lets you open and use zip files without opening them, but this will fail if you dont extract everything
+    - Once unziped right click on the unzipped folder -> New terminal at Folder
+    - Type these commands:
+    chmod +x ./[Just press tab it should auto complete the file name for you, hit enter after]
+    chmod -R 755 .[<- yes a '.' and Press enter]
+    - Go back to finder open the folder and click on the file it will fail to open
+    - Go to settings -> Privacy/Security, scroll to the bottom and you'll see the file there and a button that says 'open anyway' press this
+
+    What this all did 'chmod +x ./[filename]' this adds execute permissions since the build is made from a windows pc it doesn't get this permission.
+    'chmod -R 755 .' adds the correct read write execute permission necessary to run a file.
+    Settings Privacy/Security is apples Gatekeeper, apple doesn't like files that it doesn't already know so this is the bypass Gatekeeper method.
 </Pre>
 
 <div>
