--- a/index.html
+++ b/index.html
@@ -1,23 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Gremmi Goes To mars</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="description" content="Description">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
 </head>
 <body>
-<h1>Gremmi Goes To Mars</h1>
-<p>Gremmi is a goblin who was exiled from earth by a nearby kingdom. His new life will begin on mars. Will he survive the
-toxic gasses? How will he grow food? Wheres his water source? Help Gremmi make the right choices and survive on Mars.</p>
+  <div id="app"></div>
+  <script>
+    window.$docsify = {
+      name: 'Gremmi Goes To Mars Docs',
+      repo: '',
+      loadSidebar: true,
+      loadNavbar: true,
+      search: {
+        paths: 'auto',           // Auto-index all pages (you can also list them manually)
+        placeholder: 'Search...',
+        noData: 'No results!',
+        depth: 2,                // Headings depth (e.g., h1, h2)
+      }
+    }
+  </script>
+  <!-- Docsify v4 -->
+  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+<!--  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>-->
+  <!-- Search plugin -->
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <style>
+    /* Ensure the search box stays at the top */
+    .sidebar .search input {
+      display: block;
+      width: 100%;
+      margin-bottom: 10px;
+    }
 
-<nav>
-  <ul>
-    <li><a href="Documents/prereleases.html" target="frame">Pre-releases</a></li>
-      <li><a href="Documents/index.html">Documentation</a></li>
-  </ul>
-</nav>
+    /* Move the search results BELOW the input */
+    .sidebar .results-panel {
+      order: 2; /* Push below the input */
+    }
 
-<iframe src="" frameborder="0" name="frame" width="100%" style="max-height: 100%; min-height: 600px; height: 100%;"></iframe>
+    /* Optional: ensure sidebar items stay at the bottom */
+    .sidebar .app-sub-sidebar {
+      order: 3;
+    }
+
+    /* Ensure flexbox layout */
+    .sidebar {
+      display: flex;
+      flex-direction: column;
+    }
+  </style>
 
 </body>
 </html>
