--- a/index.html
+++ b/index.html
@@ -12,47 +12,11 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'Gremmi Goes To Mars Docs',
-      repo: '',
-      loadSidebar: true,
-      loadNavbar: true,
-      search: {
-        paths: 'auto',           // Auto-index all pages (you can also list them manually)
-        placeholder: 'Search...',
-        noData: 'No results!',
-        depth: 2,                // Headings depth (e.g., h1, h2)
-      }
+      name: '',
+      repo: ''
     }
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-<!--  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>-->
-  <!-- Search plugin -->
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-  <style>
-    /* Ensure the search box stays at the top */
-    .sidebar .search input {
-      display: block;
-      width: 100%;
-      margin-bottom: 10px;
-    }
-
-    /* Move the search results BELOW the input */
-    .sidebar .results-panel {
-      order: 2; /* Push below the input */
-    }
-
-    /* Optional: ensure sidebar items stay at the bottom */
-    .sidebar .app-sub-sidebar {
-      order: 3;
-    }
-
-    /* Ensure flexbox layout */
-    .sidebar {
-      display: flex;
-      flex-direction: column;
-    }
-  </style>
-
 </body>
 </html>
